--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.0",
-    "lucide-react": "^0.469.0"
+    "lucide-react": "^0.469.0",
+    "firebase": "^11.3.1",
+    "@vercel/edge-config": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
