--- a/package.json
+++ b/package.json
@@ -1,27 +1,22 @@
-
 {
-  "name": "carrito-ppoc",
+  "name": "ppoc---planificación-de-turnos",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "recharts": "^2.15.0",
-    "lucide-react": "^0.469.0",
-    "firebase": "^11.3.1",
-    "@vercel/edge-config": "^1.4.0"
+    "react-dom": "^19.2.3",
+    "react": "^19.2.3",
+    "@google/genai": "^1.35.0"
   },
   "devDependencies": {
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "^5.7.2",
-    "vite": "^6.0.5"
+    "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0"
   }
 }
