--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ppoc---planificación-de-turnos",
+  "name": "ppco---gestión-de-turnos",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.3",
     "react": "^19.2.3",
-    "@google/genai": "^1.35.0"
+    "@google/genai": "^1.35.0",
+    "react-dom": "^19.2.3",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
