--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ppco---gestión-de-turnos",
+  "name": "ppco---la-barbera",
   "private": true,
   "version": "0.0.0",
   "type": "module",
