--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
+    "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -18,6 +18,21 @@
     "jsx": "react-jsx",
     "types": ["node"]
   },
-  "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": ["index.tsx", "App.tsx", "types.ts", "services/**/*", "components/**/*"],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "components/AuthView.tsx",
+    "components/CalendarView.tsx",
+    "components/DashboardStats.tsx",
+    "components/Header.tsx",
+    "components/NotificationSimulator.tsx",
+    "components/NotificationsView.tsx",
+    "components/PersonalShiftsView.tsx",
+    "components/PlanningView.tsx",
+    "components/UserDirectory.tsx",
+    "constants.ts",
+    "lib/config.ts",
+    "lib/firebase.ts"
+  ]
 }
