--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
-
 {
-  "name": "ppco-la-barbera",
+  "name": "ppoc---la-vila",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,20 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.35.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.2",
-    "recharts": "^2.15.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "@google/genai": "^1.36.0",
+    "lucide-react": "^0.562.0",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7"
   },
   "devDependencies": {
-    "@types/node": "^22.0.0",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "^5.0.0",
-    "vite": "^6.0.0",
-    "terser": "^5.37.0"
+    "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0"
   }
 }
