--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "@google/genai": "^1.36.0",
     "lucide-react": "^0.562.0",
     "jspdf": "^4.0.0",
-    "jspdf-autotable": "^5.0.7",
-    "@supabase/supabase-js": "^2.45.0"
+    "jspdf-autotable": "^5.0.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
