Modify .env.local with new API keys and settings
Updated API keys and added Supabase configuration.

--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,5 @@
-AIzaSyDMEGjB-NnrJsYhkqI4QDhUf1zittMmzLEGEMINI_API_KEY=
+GEMINI_API_KEY=AIzaSyB70TNH2w7pXAwYqHRLjrgUo8_oHmzPewI
+
+VITE_SUPABASE_URL=https://osjmfirajvypusoncwhj.supabase.co
+VITE_SUPABASE_ANON_KEY=sb_publishable_JT1BdimG_bQWXMgk1b-_hA_d1HyfXxT
+VITE_SUPABASE_SERVICE_ROLE_KEY=TU_CLAVE_SERVICE_ROLE_DE_SUPABASE
